Updates with no changelog.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <title>Chatterbox</title>
 </head>
 <body>
-<h1>Chatterbox</h1>
+    <h1>Chatterbox</h1>
+    <div>
+    <video autoplay="true" id="remote"></video>
+    <video autoplay="true" id="local"></video>
+    </div>
 <input id="data" type="text" />
 <input id="sendButton" type="button" value="send" />
 <ul id="messages"> </ul>
