--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 </head>
 <body>
     <h1>Chatterbox</h1>
+    <div><input id="joinButton" type='button' value='Join'></input></div>
     <div>
     <video autoplay="true" id="remote"></video>
-    <video autoplay="true" id="local"></video>
+    <video autoplay="true" muted="true" id="local"></video>
     </div>
 <input id="data" type="text" />
 <input id="sendButton" type="button" value="send" />
 <ul id="messages"> </ul>
-<script src="minified-src.js"></script>
+<script src="adapter.js"></script>
+<script src="util.js"></script>
+<script src="csocket.js"></script>
 <script src="chatterbox.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
